package ca.mcmaster.se2aa4.island.team105.map;

import org.json.JSONArray;

// responsible for updating exploration data
public class SubObserver {
    // updates the subObserver with new data
    public void update(String found, int range, JSONArray biomes, int batteryLevel, JSONArray siteList, JSONArray creekList) {
        // method left empty
        
    }
}
